--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@supabase/supabase-js": "^2.43.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@uploadthing/react": "^6.5.1",
+    "uploadthing": "^6.10.1"
   },
   "devDependencies": {
     "eslint": "^8",
